--- a/multivoice_agents.ipynb
+++ b/multivoice_agents.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.prompts import PromptTemplate\n",
     "from langchain_openai import ChatOpenAI\n",
     "\n",
     "system = \"\"\"You are Andrea, a knowledgeable and friendly assistant in a telecommunications company. Your expertise lies in various mobile plans and upgrades. Your role is to help users understand their options and assist them with their queries about mobile plans and upgrades. Always respond in a helpful and professional manner.\n",
@@ -46,7 +46,7 @@
     "\n",
     "Remember, your goal is to make the user feel supported and informed. Always be courteous and clear in your responses.\n",
     "\"\"\"\n",
-    "\n"
+    "prompt_template = PromptTemplate.from_template(system)"
    ]
   },
   {
@@ -57,6 +57,7 @@
    "source": [
     "import requests\n",
     "from langchain_core.tools import tool\n",
+    "from datetime import datetime, timedelta\n",
     "\n",
     "API_URL = \"http://127.0.0.1:8000\"\n",
     "ADMIN_USERNAME = \"admin1\"\n",
@@ -101,35 +102,137 @@
     "    except Exception as e:\n",
     "        return f\"Failed to execute. Error: {repr(e)}\"\n",
     "\n",
-    "tools = [create_contract_tool]"
+    "\n",
+    "@tool\n",
+    "def update_contract_status_tool(contract_id: int, category: Optional[str] = None):\n",
+    "    \"\"\"\n",
+    "    Update the status of a contract.\n",
+    "\n",
+    "    Args:\n",
+    "        contract_id (int): ID of the contract to be updated.\n",
+    "        category (str, optional): New category for the contract. Must be one of \"basic\", \"normal\", or \"premium\".\n",
+    "\n",
+    "    Returns:\n",
+    "        str: A string containing the details of the updated contract.\n",
+    "        str: Error message if the contract is not found or if any other validation fails.\n",
+    "\n",
+    "    This function interacts with the FastAPI API to update the status of the specified contract.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Login as admin\n",
+    "        login_response = requests.post(f\"{API_URL}/token/\", data={\"username\": ADMIN_USERNAME, \"password\": ADMIN_PASSWORD})\n",
+    "        if login_response.status_code != 200:\n",
+    "            return f\"Login failed: {login_response.json().get('detail')}\"\n",
+    "\n",
+    "        access_token = login_response.json().get(\"access_token\")\n",
+    "        headers = {\"Authorization\": f\"Bearer {access_token}\"}\n",
+    "\n",
+    "        # Validate the category if provided\n",
+    "        if category and category not in [\"basic\", \"normal\", \"premium\"]:\n",
+    "            return \"Category must be one of: basic, normal, premium\"\n",
+    "\n",
+    "        # Update contract\n",
+    "        update_data = {\"category\": category}\n",
+    "        update_response = requests.put(f\"{API_URL}/contracts/{contract_id}/\", json=update_data, headers=headers)\n",
+    "        if update_response.status_code != 200:\n",
+    "            return f\"Failed to update contract: {update_response.json().get('detail')}\"\n",
+    "\n",
+    "        contract = update_response.json()\n",
+    "        return f\"Contract updated: ID {contract['id']}, Category {contract['category']}, Contract Time {contract['contract_time']}\"\n",
+    "    except Exception as e:\n",
+    "        return f\"Failed to execute. Error: {repr(e)}\"\n",
+    "\n",
+    "\n",
+    "@tool\n",
+    "def delete_contract_tool(contract_id: int):\n",
+    "    \"\"\"\n",
+    "    Delete a contract (set it to expire in 3 months).\n",
+    "\n",
+    "    Args:\n",
+    "        contract_id (int): ID of the contract to be deleted.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: A string confirming the deletion of the contract along with the exact date it will expire.\n",
+    "        str: Error message if the contract is not found or if any other validation fails.\n",
+    "\n",
+    "    This function interacts with the FastAPI API to delete the specified contract.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Login as admin\n",
+    "        login_response = requests.post(f\"{API_URL}/token/\", data={\"username\": ADMIN_USERNAME, \"password\": ADMIN_PASSWORD})\n",
+    "        if login_response.status_code != 200:\n",
+    "            return f\"Login failed: {login_response.json().get('detail')}\"\n",
+    "\n",
+    "        access_token = login_response.json().get(\"access_token\")\n",
+    "        headers = {\"Authorization\": f\"Bearer {access_token}\"}\n",
+    "\n",
+    "        # Delete contract\n",
+    "        delete_response = requests.delete(f\"{API_URL}/contracts/{contract_id}/\", headers=headers)\n",
+    "        if delete_response.status_code != 200:\n",
+    "            return f\"Failed to delete contract: {delete_response.json().get('detail')}\"\n",
+    "\n",
+    "        expiration_date = (datetime.utcnow() + timedelta(days=90)).date()\n",
+    "        return f\"Contract will be cancelled on {expiration_date}\"\n",
+    "    except Exception as e:\n",
+    "        return f\"Failed to execute. Error: {repr(e)}\"\n",
+    "\n",
+    "\n",
+    "@tool\n",
+    "def get_contract_details_tool(contract_id: int):\n",
+    "    \"\"\"\n",
+    "    Get the details of a contract.\n",
+    "\n",
+    "    Args:\n",
+    "        contract_id (int): ID of the contract to retrieve.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: A string containing the details of the contract.\n",
+    "        str: Error message if the contract is not found or if any other validation fails.\n",
+    "\n",
+    "    This function interacts with the FastAPI API to retrieve the specified contract's details.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Login as admin\n",
+    "        login_response = requests.post(f\"{API_URL}/token/\", data={\"username\": ADMIN_USERNAME, \"password\": ADMIN_PASSWORD})\n",
+    "        if login_response.status_code != 200:\n",
+    "            return f\"Login failed: {login_response.json().get('detail')}\"\n",
+    "\n",
+    "        access_token = login_response.json().get(\"access_token\")\n",
+    "        headers = {\"Authorization\": f\"Bearer {access_token}\"}\n",
+    "\n",
+    "        # Get contract details\n",
+    "        get_response = requests.get(f\"{API_URL}/contracts/{contract_id}/\", headers=headers)\n",
+    "        if get_response.status_code != 200:\n",
+    "            return f\"Failed to get contract details: {get_response.json().get('detail')}\"\n",
+    "\n",
+    "        contract = get_response.json()\n",
+    "        return f\"Contract details: ID {contract['id']}, Category {contract['category']}, Contract Time {contract['contract_time']}, User ID {contract['user_id']}\"\n",
+    "    except Exception as e:\n",
+    "        return f\"Failed to execute. Error: {repr(e)}\"\n",
+    "\n",
+    "\n",
+    "tools = [create_contract_tool, update_contract_status_tool, delete_contract_tool, get_contract_details_tool]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_core.messages.human import HumanMessage\n",
+    "from langchain_core.messages.system import SystemMessage\n",
     "\n",
-    "order_prompt = ChatPromptTemplate.from_messages(\n",
-    "    [\n",
-    "        (\"system\", system),\n",
-    "        (\"placeholder\", \"{chat_history}\"),\n",
-    "        (\"human\", \"{question}\"),\n",
-    "    ]\n",
-    ")\n",
+    "sys_msg = [SystemMessage(content=prompt_template.format(username=\"Max\", user_id=4))]\n",
+    "hu_msg = [HumanMessage(content=\"I would like to create a premium contract please.\")]\n",
     "\n",
-    "question = \"I would like to create a premium contract please. My user ID is 6\"\n",
     "chat_history = []\n",
-    "messages = [HumanMessage(content=question)]\n",
     "\n",
+    "messages = sys_msg + chat_history + hu_msg\n",
     "model = ChatOpenAI()\n",
     "model_with_tools = model.bind_tools(tools=tools)\n",
-    "order_checker_llm = order_prompt | model_with_tools\n",
-    "result = order_checker_llm.invoke(\n",
-    "    {\"question\": question, \"chat_history\": chat_history, \"username\": \"Max\", \"user_id\": 3},\n",
-    ")"
+    "\n",
+    "result = model_with_tools.invoke(messages)"
    ]
   },
   {
@@ -150,8 +253,8 @@
      "data": {
       "text/plain": [
        "[{'name': 'create_contract_tool',\n",
-       "  'args': {'user_id': 6, 'category': 'premium'},\n",
-       "  'id': 'call_8Si7qdj9JzdUVeHy0Mvud2TA',\n",
+       "  'args': {'user_id': 4, 'category': 'premium'},\n",
+       "  'id': 'call_FClZJxmm8W5DDae78HRWyWD4',\n",
        "  'type': 'tool_call'}]"
       ]
      },
@@ -173,8 +276,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Use Tool: {'name': 'create_contract_tool', 'args': {'user_id': 6, 'category': 'premium'}, 'id': 'call_8Si7qdj9JzdUVeHy0Mvud2TA', 'type': 'tool_call'}\n",
-      "Failed to create contract: User already has a contract\n"
+      "Use Tool: {'name': 'create_contract_tool', 'args': {'user_id': 4, 'category': 'premium'}, 'id': 'call_FClZJxmm8W5DDae78HRWyWD4', 'type': 'tool_call'}\n",
+      "Failed to execute. Error: ConnectionError(MaxRetryError(\"HTTPConnectionPool(host='127.0.0.1', port=8000): Max retries exceeded with url: /token/ (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x000001EB7666BF50>: Failed to establish a new connection: [WinError 10061] Es konnte keine Verbindung hergestellt werden, da der Zielcomputer die Verbindung verweigerte'))\"))\n"
      ]
     }
    ],
@@ -199,9 +302,10 @@
     {
      "data": {
       "text/plain": [
-       "[HumanMessage(content='I would like to create a premium contract please. My user ID is 6'),\n",
-       " AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_8Si7qdj9JzdUVeHy0Mvud2TA', 'function': {'arguments': '{\"user_id\":6,\"category\":\"premium\"}', 'name': 'create_contract_tool'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 20, 'prompt_tokens': 268, 'total_tokens': 288}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-1be3cc07-5351-4346-b652-d8ae17afa307-0', tool_calls=[{'name': 'create_contract_tool', 'args': {'user_id': 6, 'category': 'premium'}, 'id': 'call_8Si7qdj9JzdUVeHy0Mvud2TA', 'type': 'tool_call'}], usage_metadata={'input_tokens': 268, 'output_tokens': 20, 'total_tokens': 288}),\n",
-       " ToolMessage(content='Failed to create contract: User already has a contract', tool_call_id='call_8Si7qdj9JzdUVeHy0Mvud2TA')]"
+       "[SystemMessage(content='You are Andrea, a knowledgeable and friendly assistant in a telecommunications company. Your expertise lies in various mobile plans and upgrades. Your role is to help users understand their options and assist them with their queries about mobile plans and upgrades. Always respond in a helpful and professional manner.\\nAlways speak to the user with his name.\\n\\nUsername: Max\\nUserID: 4\\n\\nRemember, your goal is to make the user feel supported and informed. Always be courteous and clear in your responses.\\n'),\n",
+       " HumanMessage(content='I would like to create a premium contract please.'),\n",
+       " AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_FClZJxmm8W5DDae78HRWyWD4', 'function': {'arguments': '{\"user_id\":4,\"category\":\"premium\"}', 'name': 'create_contract_tool'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 20, 'prompt_tokens': 262, 'total_tokens': 282}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-9f04b5a2-9785-4ccd-a346-45cede8ec871-0', tool_calls=[{'name': 'create_contract_tool', 'args': {'user_id': 4, 'category': 'premium'}, 'id': 'call_FClZJxmm8W5DDae78HRWyWD4', 'type': 'tool_call'}], usage_metadata={'input_tokens': 262, 'output_tokens': 20, 'total_tokens': 282}),\n",
+       " ToolMessage(content='Failed to execute. Error: ConnectionError(MaxRetryError(\"HTTPConnectionPool(host=\\'127.0.0.1\\', port=8000): Max retries exceeded with url: /token/ (Caused by NewConnectionError(\\'<urllib3.connection.HTTPConnection object at 0x000001EB7666BF50>: Failed to establish a new connection: [WinError 10061] Es konnte keine Verbindung hergestellt werden, da der Zielcomputer die Verbindung verweigerte\\'))\"))', tool_call_id='call_FClZJxmm8W5DDae78HRWyWD4')]"
       ]
      },
      "execution_count": 8,
@@ -215,16 +319,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='It seems that you already have a contract. If you have any specific requests or need assistance with your existing contract, please let me know how I can help you further.', response_metadata={'token_usage': {'completion_tokens': 35, 'prompt_tokens': 212, 'total_tokens': 247}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-01ee8b49-b773-47d2-b14f-365d8e971116-0', usage_metadata={'input_tokens': 212, 'output_tokens': 35, 'total_tokens': 247})"
+       "AIMessage(content='I apologize for the inconvenience. It seems there was an issue with creating the premium contract at the moment. Let me try to create the contract again for you.', additional_kwargs={'tool_calls': [{'id': 'call_izHGuQci9WesseRarVPm8Evn', 'function': {'arguments': '{\"user_id\":4,\"category\":\"premium\"}', 'name': 'create_contract_tool'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 53, 'prompt_tokens': 394, 'total_tokens': 447}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-50d17686-0436-4583-af64-61c0df653c1a-0', tool_calls=[{'name': 'create_contract_tool', 'args': {'user_id': 4, 'category': 'premium'}, 'id': 'call_izHGuQci9WesseRarVPm8Evn', 'type': 'tool_call'}], usage_metadata={'input_tokens': 394, 'output_tokens': 53, 'total_tokens': 447})"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
