--- a/multivoice_agents.ipynb
+++ b/multivoice_agents.ipynb
@@ -101,16 +101,12 @@
     "    print(\"Waiting for admin approval...\")\n",
     "    while True:\n",
     "        response = requests.get(f\"{API_URL}/check_confirmation/{username}\")\n",
-    "        print(\"RESPONSE:\", response.json())\n",
     "        if response.status_code == 200:\n",
     "            result = response.json()\n",
     "            print(f\"Received admin approval response: {result}\")\n",
-    "            if result.get(\"message\") == \"Admin denied the request\":\n",
-    "                return \"Admin denied your request\"\n",
-    "            elif result.get(\"message\") == \"Contract created\":\n",
+    "            if result.get(\"message\") in [\"Admin denied the request\", \"Contract created\"]:\n",
     "                return result\n",
     "        time.sleep(2)  # Add a delay before retrying to avoid spamming the server\n",
-    "\n",
     "\n",
     "@tool\n",
     "def create_contract_tool(username: str, category: str):\n",
@@ -158,10 +154,12 @@
     "    if admin_request == \"Admin approval requested\":\n",
     "        # Wait for admin approval\n",
     "        approval_result = wait_for_admin_approval(\"create\", username, category)\n",
-    "        if isinstance(approval_result, dict) and \"denied\" in approval_result.get('message', \"\").lower():\n",
-    "            print(f\"Admin denied the request: {approval_result}\")\n",
+    "        print(\"APPROVAL RESULT: \", approval_result)\n",
+    "\n",
+    "        if approval_result.get(\"message\") == \"Admin denied the request\":\n",
+    "            print(f\"Admin denied the request: {approval_result.get('message')}\")\n",
     "            return approval_result.get('message')\n",
-    "        elif isinstance(approval_result, dict) and approval_result.get('message') == \"Contract created\":\n",
+    "        elif approval_result.get(\"message\") == \"Contract created\":\n",
     "            print(f\"Admin created the contract: {approval_result}\")\n",
     "            return f\"Contract successfully created: ID {approval_result['id']}, Category {approval_result['category']}, Contract Time {approval_result['contract_time']}, User ID {approval_result['user_id']}\"\n",
     "\n",
@@ -179,7 +177,7 @@
     "from langchain_core.messages.human import HumanMessage\n",
     "from langchain_core.messages.system import SystemMessage\n",
     "\n",
-    "sys_msg = [SystemMessage(content=prompt_template.format(username=\"aaa\"))]\n",
+    "sys_msg = [SystemMessage(content=prompt_template.format(username=\"aaaa\"))]\n",
     "hu_msg = [HumanMessage(content=\"I would like to create a premium contract please.\")]\n",
     "\n",
     "chat_history = []\n",
